# akonadi-vkontakte

./: CMakeLists.txt  TODO
libkvkontakte/: CMakeLists.txt  newsfeedjob.cpp  newsfeedjob.h  newsiteminfo.cpp  newsiteminfo.h  userinfojob.cpp  userinfojob.h
resource/: CMakeLists.txt  config.h.cmake  settingsdialog.cpp  settingsdialog.h  vkontakteresource.cpp  vkontakteresource.desktop  vkontakteresource.h  vkontakteresource_friends.cpp  vkontakteresource_messages.cpp  vkontakteresource_news.cpp  vkontakteresource_notes.cpp
